# STIFMaps

./: .dockerignore  .gitignore  README.md  STIFMap_generation.py  main.py  misc.py  pyproject.toml  training.py  vis.py
