[tool.poetry]
name = "stifmaps"
version = "0.1.0"
description = ""
authors = ["ygidtu <ygidtu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
seaborn = "^0.13.0"
xlrd = "^2.0.1"
torch = "^2.1.0"
torchvision = "^0.16.0"
scipy = "^1.11.3"
numpy = "^1.26.1"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.1"
tqdm = "^4.66.1"
click = "^8.1.7"
opencv-python = "^4.8.1.78"
scikit-image = "^0.22.0"
loguru = "^0.7.2"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"